--- a/assets/theme/css/style.css
+++ b/assets/theme/css/style.css
@@ -590,7 +590,7 @@ p.lead,
  */
 body {
   font-family: 'Raleway', sans-serif;
-  color: #232323; }
+  color: #ffffff; }
 
 h1, h2, h3, h4, h5, h6,
 .h1, .h2, .h3, .h4, .h5, .h6,
